docs/policies/gatekeeper/restrict-approved-registry-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not startswith(container.image, allowed)
          msg := sprintf("Image %v is not from an approved registry", [container.image])
        }

        allowed = registry {
          registry := input.parameters.repos[_]
        }
